cleaning data and plotting

--- a/notebooks/06-Data-Formating.ipynb
+++ b/notebooks/06-Data-Formating.ipynb
@@ -19,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
-    "from wordcloud import WordCloud\n"
+    "from wordcloud import WordCloud\n",
+    "import spacy\n"
    ]
   },
   {
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +710,7 @@
        "258"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,27 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.salary.nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -813,7 +794,8 @@
     "\n",
     "    salary = re.sub(r\"syp|sp|l\\.s|syrian lira|syrian pound(s)?|s\\.p\", \" SYP\", salary)\n",
     "    salary = re.sub(r\"dollar|usd|\\$|\\ds$\", \" USD\", salary)\n",
-    "    salary = re.sub(r\",|#|~|'|\\.|:\", \"\", salary)\n",
+    "    salary = re.sub(r\"(\\d\\.\\d)(\\s?million)\" , r\"\\1.00000\", salary)\n",
+    "    salary = re.sub(r\",|#|~|'|:|\\.\", \"\", salary)\n",
     "    salary = re.sub(r\" million(s)?|(?<=\\d)m\", \"000000\", salary)\n",
     "    salary = re.sub(r\"(?<=\\d)\\s+(?=\\d{3}\\s)\", \"\", salary)\n",
     "    salary = re.sub(r\"per month|starting from|up to\", \"\", salary)\n",
@@ -850,14 +832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n"
+      "26\n"
      ]
     }
    ],
@@ -868,7 +850,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_avg_salary(text):\n",
+    "    if text is np.nan:\n",
+    "        return text\n",
+    "\n",
+    "    match = re.findall(\"\\d+\" , text)\n",
+    "    is_dollar = re.search(\"USD\", text) is not None\n",
+    "    if match:\n",
+    "        if len(match) >1:\n",
+    "            return int((int(match[0]) + int(match[1]))/2 * (6000 if is_dollar else 1))\n",
+    "        return int(match[0]) *(6000 if is_dollar else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['avg_salary'] = data.salary.apply(calculate_avg_salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +913,7 @@
        "106"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,18 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
-    "\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,33 +966,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['nan', 'damascus', 'remotely', '', '(hybrid) remotely damascus',\n",
-       "       'qassa damascus syria', '(hybrid) remotely istanbul turkey',\n",
-       "       'iraq', 'damascus syria', 'syria', 'dubai', 'lebanon',\n",
-       "       'syria damascus', 'damascus baghdad', 'damascus latakia',\n",
-       "       'damascus adnan', '(hybrid) remotely lebanon syria egypt turkey',\n",
-       "       'germany', 'damascus syria syria', 'damascus dubai baghdad'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 413,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.location.unique()\n"
+    "def fix_location(text):\n",
+    "    if text is np.nan:\n",
+    "        return text\n",
+    "    text = re.sub(\"adnan|qassa\" , \"\" ,text)\n",
+    "    text = re.sub(\"damascus syria syria|damascus syria|syria damascus|damascus\",\"Damascus - Syria\",text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "data.location = data.location.apply(fix_location)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +999,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"../data/data_v6.8.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1017,7 @@
        "134"
       ]
      },
-     "execution_count": 414,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1082,7 @@
        "13"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,11 +1093,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"../data/data_v6.4.csv\", index=False)\n"
+    "data.to_csv(\"../data/data_v6.8.csv\", index=False)\n"
    ]
   },
   {
@@ -1104,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1119,7 @@
        "116"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1181,7 @@
        "7"
       ]
      },
-     "execution_count": 421,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,11 +1192,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"../data/data_v6.5.csv\" , index=False)"
+    "# dropping rows with null values in all job details columns \n",
+    "data = data[~data.iloc[:, 11:20 ].isnull().all(axis=1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dropping rows with job title equal to nan\n",
+    "\n",
+    "data = data[data.job_title.notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"../data/data_v6.9.csv\" , index=False)"
    ]
   },
   {
@@ -1203,16 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv(\"../data/data_v6.9.csv\" , index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1363,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1510,7 @@
        "4        NaN            NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
