--- a/notebooks/01-Data-Understanding.ipynb
+++ b/notebooks/01-Data-Understanding.ipynb
@@ -9,10 +9,9 @@
     "\n",
     "In this project, we will be analyzing job posts data to gain insights into the job market of tech-industry, specially the Syrian Mjob market. We will be focusing on identifying patterns and trends in job titles, skills required, and industries. By performing this analysis, we hope to gain a better understanding of the job market. We will be using a variety of data science techniques such as data cleaning, data visualization, and statistical analysis to extract meaningful insights from the data. Additionally, we will be using Computer Vision techniques like OCR to extract text from image job posts, also, we will use natural language processing (NLP) techniques to analyze the text in the job posts. The goal of this project is to provide valuable insights that can assist job seekers and employers in their job search and hiring process. <br>\n",
     "\n",
-    "\n",
-    "This project is divided into multiple parts:\n",
-    "01.  Data Understanding\n",
-    "02.  Data Cleaning  "
+    "This project is divided into multiple parts: \n",
+    "01. Data Understanding \n",
+    "02. Data Cleaning\n"
    ]
   },
   {
@@ -22,7 +21,7 @@
    "source": [
     "## 01 Data Understanding\n",
     "\n",
-    "In this notebook, we will check out the data, understand its structure, take a look at the columns, and finally convert it into a more convenient form suitable for further analysis."
+    "In this notebook, we will check out the data, understand its structure, take a look at the columns, and finally convert it into a more convenient form suitable for further analysis.\n"
    ]
   },
   {
@@ -33,7 +32,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n"
    ]
   },
   {
@@ -43,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Reading Data\n",
-    "data = pd.read_json(\"../data/result.json\")"
+    "data = pd.read_json(\"../data/result.json\")\n"
    ]
   },
   {
@@ -140,7 +139,7 @@
     }
    ],
    "source": [
-    "data.head()"
+    "data.head()\n"
    ]
   },
   {
@@ -358,7 +357,7 @@
    "source": [
     "messages = data.messages.to_json()\n",
     "messages = pd.read_json(messages).T\n",
-    "messages.head()"
+    "messages.head()\n"
    ]
   },
   {
@@ -368,6 +367,7 @@
    "source": [
     "each row represents a unique message in the channel <br>\n",
     "Columns explanation:\n",
+    "\n",
     "- **id**: message id\n",
     "- **type**: message, poll, etc.\n",
     "- **date**: the date and time that the message was sent on.\n",
@@ -385,7 +385,7 @@
     "- **mime_type**: file type (like if an image was sent as a file).\n",
     "- **media_type**: media file type.\n",
     "- **duration_seconds**: video duration in seconds (if message was a video).\n",
-    "- **forwarded_from**: user name that the message was forwarded from."
+    "- **forwarded_from**: user name that the message was forwarded from.\n"
    ]
   },
   {
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "messages.shape"
+    "messages.shape\n"
    ]
   },
   {
@@ -447,7 +447,7 @@
     }
    ],
    "source": [
-    "messages.info()"
+    "messages.info()\n"
    ]
   },
   {
@@ -634,7 +634,7 @@
     }
    ],
    "source": [
-    "messages.describe(include='O')"
+    "messages.describe(include=\"O\")\n"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "source": [
     "### Initial Data Cleaning\n",
     "\n",
-    "we will preform some minor cleaning processes, to restructure the data and remove unwanted parts."
+    "we will preform some minor cleaning processes, to restructure the data and remove unwanted parts.\n"
    ]
   },
   {
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "messages.type.unique()"
+    "messages.type.unique()\n"
    ]
   },
   {
@@ -684,7 +684,7 @@
     }
    ],
    "source": [
-    "messages['from'].unique()"
+    "messages[\"from\"].unique()\n"
    ]
   },
   {
@@ -704,7 +704,7 @@
     }
    ],
    "source": [
-    "messages['from_id'].unique()"
+    "messages[\"from_id\"].unique()\n"
    ]
   },
   {
@@ -712,9 +712,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the following columns: *type*, *from*, *from_id* have only one value each, <br>\n",
-    "that make sense, as the data was extracted from a public channel and only admin can send messages, so *from* and *from_id* values will always be the same.<br>\n",
-    "these columns are not useful for our analysis so we will drop them."
+    "the following columns: _type_, _from_, _from_id_ have only one value each, <br>\n",
+    "that make sense, as the data was extracted from a public channel and only admin can send messages, so _from_ and _from_id_ values will always be the same.<br>\n",
+    "these columns are not useful for our analysis so we will drop them.\n"
    ]
   },
   {
@@ -723,7 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages.drop(columns=['type' , 'from' , 'from_id'] , inplace=True)"
+    "messages.drop(columns=[\"type\", \"from\", \"from_id\"], inplace=True)\n"
    ]
   },
   {
@@ -733,7 +733,7 @@
    "source": [
     "also, the following columns do not contain any useful information for our analysis purpose, so we will drop them. <br>\n",
     "\n",
-    "*edited, edited_unixtime, file, thumbnail, mime_type, media_type, duration_seconds, forwarded_from*"
+    "_edited, edited_unixtime, file, thumbnail, mime_type, media_type, duration_seconds, forwarded_from_\n"
    ]
   },
   {
@@ -742,8 +742,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages.drop(columns=[\"edited\", \"edited_unixtime\", \"file\", \"thumbnail\",\n",
-    "\"mime_type\", \"media_type\", \"duration_seconds\", \"forwarded_from\"], inplace=True)"
+    "messages.drop(\n",
+    "    columns=[\n",
+    "        \"edited\",\n",
+    "        \"edited_unixtime\",\n",
+    "        \"file\",\n",
+    "        \"thumbnail\",\n",
+    "        \"mime_type\",\n",
+    "        \"media_type\",\n",
+    "        \"duration_seconds\",\n",
+    "        \"forwarded_from\",\n",
+    "    ],\n",
+    "    inplace=True,\n",
+    ")\n"
    ]
   },
   {
@@ -751,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our analysis, we will be looking at the job market during 2022, so we will keep the messages of the year 2022 only"
+    "For our analysis, we will be looking at the job market during 2022, so we will keep the messages of the year 2022 only\n"
    ]
   },
   {
@@ -761,7 +772,9 @@
    "outputs": [],
    "source": [
     "# keep only job posts that was published between 1-1-2022 and 31-1-2023\n",
-    "messages = messages.loc[(messages.date < '2023-01-01') & (messages.date >= '2022-01-01') ]"
+    "messages = messages.loc[\n",
+    "    (messages.date < \"2023-01-01\") & (messages.date >= \"2022-01-01\")\n",
+    "]\n"
    ]
   },
   {
@@ -770,7 +783,8 @@
    "metadata": {},
    "source": [
     "### Creating Raw Text column\n",
-    "create a **raw_text** column that contains the message text as a raw string"
+    "\n",
+    "create a **raw_text** column that contains the message text as a raw string\n"
    ]
   },
   {
@@ -783,7 +797,7 @@
     "    raw_text = \"\"\n",
     "    for item in text_entities:\n",
     "        raw_text += item[\"text\"]\n",
-    "    return raw_text"
+    "    return raw_text\n"
    ]
   },
   {
@@ -792,7 +806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_text_messages = messages.text_entities.apply(convert_to_raw_text)"
+    "raw_text_messages = messages.text_entities.apply(convert_to_raw_text)\n"
    ]
   },
   {
@@ -823,7 +837,7 @@
     }
    ],
    "source": [
-    "raw_text_messages"
+    "raw_text_messages\n"
    ]
   },
   {
@@ -832,7 +846,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages[\"raw_text\"] = raw_text_messages"
+    "messages[\"raw_text\"] = raw_text_messages\n"
    ]
   },
   {
@@ -850,7 +864,7 @@
    ],
    "source": [
     "# Looking at a random text from messages\n",
-    "print(raw_text_messages[np.random.randint(0,len(raw_text_messages)-1)].split('\\n'))"
+    "print(raw_text_messages[np.random.randint(0, len(raw_text_messages) - 1)].split(\"\\n\"))\n"
    ]
   },
   {
@@ -1077,7 +1091,7 @@
     }
    ],
    "source": [
-    "messages.loc[messages.text == '']"
+    "messages.loc[messages.text == \"\"]\n"
    ]
   },
   {
@@ -1086,7 +1100,7 @@
    "metadata": {},
    "source": [
     "there are 169 messages that don't contain text, probably it's an image message. <br>\n",
-    "we will keep these messages for now, as they may contain useful information in their corresponding photo."
+    "we will keep these messages for now, as they may contain useful information in their corresponding photo.\n"
    ]
   },
   {
@@ -1096,7 +1110,7 @@
    "source": [
     "## Seperating Job Post messages from others\n",
     "\n",
-    "messages do not always contain a job post info, it may contain an image only, or a link, or it may be empty"
+    "messages do not always contain a job post info, it may contain an image only, or a link, or it may be empty\n"
    ]
   },
   {
@@ -1105,9 +1119,10 @@
    "metadata": {},
    "source": [
     "we will assume the following:\n",
-    "- if a message contain any of the following keywords *job title* *company* *job type* *job location* then it's a job post\n",
+    "\n",
+    "- if a message contain any of the following keywords _job title_ _company_ _job type_ _job location_ then it's a job post\n",
     "- otherwise, we will assume (just for now) that this message is a non-job post message\n",
-    "- we will divide text messages into categories, `job_post`, `link`, `empty`, and `others`"
+    "- we will divide text messages into categories, `job_post`, `link`, `empty`, and `others`\n"
    ]
   },
   {
@@ -1117,8 +1132,8 @@
    "outputs": [],
    "source": [
     "messages = pd.read_csv(\"../data/messages.csv\")\n",
-    "messages.raw_text.fillna('', inplace=True)\n",
-    "messages[\"date\"] = pd.to_datetime(messages[\"date\"])"
+    "messages.raw_text.fillna(\"\", inplace=True)\n",
+    "messages[\"date\"] = pd.to_datetime(messages[\"date\"])\n"
    ]
   },
   {
@@ -1127,11 +1142,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eng_keywords = ['job title' , 'job location' , 'job type' , 'company', 'job_title', 'title']\n",
-    "arabic_keywords = ['فرصة_تدريب','فرصة_توظيف' , 'فرصة_عمل']\n",
+    "eng_keywords = [\n",
+    "    \"job title\",\n",
+    "    \"job location\",\n",
+    "    \"job type\",\n",
+    "    \"company\",\n",
+    "    \"job_title\",\n",
+    "    \"title\",\n",
+    "]\n",
+    "arabic_keywords = [\"فرصة_تدريب\", \"فرصة_توظيف\", \"فرصة_عمل\"]\n",
     "job_post_keywords = eng_keywords + arabic_keywords\n",
     "\n",
-    "job_post = messages.raw_text.apply(lambda text: True if any(x in text.lower() for x in job_post_keywords) else False)"
+    "job_post = messages.raw_text.apply(\n",
+    "    lambda text: True if any(x in text.lower() for x in job_post_keywords) else False\n",
+    ")\n"
    ]
   },
   {
@@ -1151,7 +1175,7 @@
     }
    ],
    "source": [
-    "job_post.sum() , job_post.sum()/messages.shape[0]*100"
+    "job_post.sum(), job_post.sum() / messages.shape[0] * 100\n"
    ]
   },
   {
@@ -1160,7 +1184,7 @@
    "metadata": {},
    "source": [
     "535 (59%) of messages contains previous keywords <br>\n",
-    "let's investigate other messages"
+    "let's investigate other messages\n"
    ]
   },
   {
@@ -1168,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "let's gradually build our job posts"
+    "let's gradually build our job posts\n"
    ]
   },
   {
@@ -1189,7 +1213,7 @@
    ],
    "source": [
     "non_job_posts = ~job_post\n",
-    "non_job_posts.sum()"
+    "non_job_posts.sum()\n"
    ]
   },
   {
@@ -1209,8 +1233,8 @@
     }
    ],
    "source": [
-    "empty_message = (messages.raw_text == '')\n",
-    "empty_message.sum()"
+    "empty_message = messages.raw_text == \"\"\n",
+    "empty_message.sum()\n"
    ]
   },
   {
@@ -1231,8 +1255,10 @@
    ],
    "source": [
     "url_regex = r\"(?i)\\b((?:https?://|www\\d{0,3}[.]|[a-z0-9.\\-]+[.][a-z]{2,4}/)(?:[^\\s()<>]+|\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\))+(?:\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\)|[^\\s`!()\\[\\]{};:'\\\".,<>?«»“”‘’]))\"\n",
-    "only_links = messages.raw_text.apply(lambda text: True if re.match(url_regex, text) else False)\n",
-    "only_links.sum()"
+    "only_links = messages.raw_text.apply(\n",
+    "    lambda text: True if re.match(url_regex, text) else False\n",
+    ")\n",
+    "only_links.sum()\n"
    ]
   },
   {
@@ -1241,11 +1267,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages['type'] = np.nan\n",
-    "messages.loc[job_post , 'type'] = 'job_post'\n",
-    "messages.loc[empty_message , 'type'] = 'empty'\n",
-    "messages.loc[only_links , 'type'] = 'link'\n",
-    "messages['type'].fillna(\"others\" ,inplace=True )\n"
+    "messages[\"type\"] = np.nan\n",
+    "messages.loc[job_post, \"type\"] = \"job_post\"\n",
+    "messages.loc[empty_message, \"type\"] = \"empty\"\n",
+    "messages.loc[only_links, \"type\"] = \"link\"\n",
+    "messages[\"type\"].fillna(\"others\", inplace=True)\n"
    ]
   },
   {
@@ -1269,7 +1295,7 @@
     }
    ],
    "source": [
-    "messages['type'].value_counts()"
+    "messages[\"type\"].value_counts()\n"
    ]
   },
   {
@@ -1423,7 +1449,7 @@
     }
    ],
    "source": [
-    "messages.head()"
+    "messages.head()\n"
    ]
   },
   {
@@ -1431,7 +1457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check for duplicate job posts"
+    "## Check for duplicate job posts\n"
    ]
   },
   {
@@ -1440,7 +1466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dups = messages[messages.raw_text != ''].duplicated(subset='raw_text')"
+    "dups = messages[messages.raw_text != \"\"].duplicated(subset=\"raw_text\")\n"
    ]
   },
   {
@@ -1460,7 +1486,7 @@
     }
    ],
    "source": [
-    "messages[(messages.raw_text != '') & dups].shape"
+    "messages[(messages.raw_text != \"\") & dups].shape\n"
    ]
   },
   {
@@ -1470,7 +1496,7 @@
    "source": [
     "some job vacancies are posted multiple times <br>\n",
     "it may be an indicator for a low hitrate of the company <br>\n",
-    "we will keep those duplicates for now, in order to perform some further analysis on them"
+    "we will keep those duplicates for now, in order to perform some further analysis on them\n"
    ]
   },
   {
@@ -1479,7 +1505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages.to_csv('../data/data_v1.csv' , index=False)"
+    "messages.to_csv(\"../data/data_v1.csv\", index=False)\n"
    ]
   },
   {
@@ -1487,7 +1513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating WordCloud"
+    "## Creating WordCloud\n"
    ]
   },
   {
@@ -1508,15 +1534,16 @@
     }
    ],
    "source": [
-    "\n",
     "from wordcloud import WordCloud\n",
     "\n",
-    "long_string = ','.join(list(messages['raw_text'].values))\n",
+    "long_string = \",\".join(list(messages[\"raw_text\"].values))\n",
     "\n",
     "\n",
-    "wordcloud = WordCloud(background_color=\"white\", max_words=5000, contour_width=3, contour_color='steelblue')\n",
+    "wordcloud = WordCloud(\n",
+    "    background_color=\"white\", max_words=5000, contour_width=3, contour_color=\"steelblue\"\n",
+    ")\n",
     "wordcloud.generate(long_string)\n",
-    "wordcloud.to_image()"
+    "wordcloud.to_image()\n"
    ]
   },
   {
@@ -1524,7 +1551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "an overall view of the words in messages, the most significant keywords are related to job posts and recriuiting ."
+    "an overall view of the words in messages, the most significant keywords are related to job posts and recriuiting .\n"
    ]
   },
   {
